[build-system]
requires = ["setuptools ==69.2.0", "wheel ==0.43.0", "setuptools-scm ==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grizzly-loadtester"
description = "Traffic generator based on locust and behave"
dynamic = ["version"]
authors = [
    {name = 'biometria', email='opensource@biometria.se'}
]
readme = "README.md"
license = {text = 'MIT'}
requires-python = ">=3.10"
dependencies = [
    "locust ==2.37.14",
    "azure-core ==1.34.0",
    "azure-servicebus ==7.14.2",
    "azure-storage-blob ==12.25.1",
    "azure-iot-device ==2.14.0",
    "behave ==1.2.6",
    "influxdb ==5.3.2",
    "influxdb-client ==1.49.0",
    "Jinja2 ==3.1.6",
    "jsonpath-ng ==1.7.0",
    "lxml ==6.0.0",
    "python-dateutil ==2.9.0.post0",
    "PyYAML ==6.0.2",
    "setproctitle ==1.3.6",
    "pyotp ==2.9.0",
    "tzdata >=2022.1",
    "websocket-client ==1.8.0",
    "jinja2-simple-tags ==0.6.1",
    "roundrobin ==0.0.4"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = [
    "locust",
    "behave",
    "load",
    "loadtest",
    "performance",
    "traffic generator"
]

[project.urls]
Documentation = 'https://biometria-se.github.io/grizzly/'
Code = 'https://github.com/biometria-se/grizzly/'
Tracker = 'https://github.com/Biometria-se/grizzly/issues'

[project.scripts]
async-messaged = "grizzly_extras.async_message.daemon:main"

[project.entry-points."mkdocs.plugins"]
grizzly-mkdocs = "grizzly_extras.mkdocs:GrizzlyMkdocs"

[project.optional-dependencies]
mq = [
    "pymqi ==1.12.10"
]
dev = [
    "wheel ==0.45.1",
    "astunparse ==1.6.3",
    "mypy ==1.16.1",
    "pytest ==8.4.1",
    "coverage[toml] ==7.9.1",
    "pytest-cov ==6.2.1",
    "pytest-mock ==3.14.1",
    "pytest-timeout ==2.4.0",
    "atomicwrites ==1.4.1",
    "snakeviz ==2.2.2",
    "ruff ==0.12.1",
    "parameterized ==0.9.0",
    "line-profiler ==4.2.0",
    "types-python-dateutil >=2.8.9",
    "types-PyYAML <7.0.0,>=6.0.0",
    "types-requests >=2.27.0",
    "types-Jinja2 >=2.0.0",
    "types-backports >=0.1.3",
    "pipdeptree"
]
ci = [
    "build ==1.2.2.post1",
    "twine ==6.1.0"
]
docs = [
    "cssselect ==1.3.0",
    "pytablewriter ==1.2.1",
    "pip-licenses ==5.0.0",
    "requests ==2.32.4",
    "mkdocstrings-python ==1.16.12",
    "mkdocs ==1.6.1",
    "mkdocs-material ==9.6.15",
    "mkdocs-autorefs ==1.4.2",
    "mkdocs-gen-files ==0.5.0",
    "mkdocs-macros-plugin ==1.3.7",
    "mkdocs-section-index ==0.3.10",
    "packaging ==25.0",
    "mistune ==3.1.3",
    "python-frontmatter ==1.1.0",
    "grizzly-loadtester-cli >=3.2.27"
]

[tool.setuptools_scm]
write_to = "grizzly/__version__.py"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["grizzly*"]
exclude = ["tests"]

[tool.setuptools.package-data]
grizzly = ["py.typed"]
grizzly_extras = ["py.typed"]

[tool.ruff]
exclude = [
    ".env", ".venv", ".pytest_tmp", "build", "dist", "grizzly/__version__.py"
]
line-length = 180
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "BLE001",
    "COM812",
    "D101", "D102", "D103", "D105", "D106", "D107", "D203", "D213", "D205", "D301", "D407", "D417",
    "DTZ005",
    "E722", "E402",
    "F405", "F403",
    "N801",
    "PD011",
    "PLR2004",
    "UP007", "UP006",
    "Q000", "Q003",
    "S101", "S104", "S314", "S603", "S701",
    "SLF001",
    "T201",
    "TRY301"
]

[tool.ruff.lint.per-file-ignores]
"script/**" = ["INP001", "D100"]
"tests/unit/test_grizzly/test_locust_dispatch.py" = ["PT009", "PT027", "UP032", "D106"]
"tests/**/*.py" = ["S106", "PLC0415"]
"tests/unit/test_grizzly/tasks/clients/test_http.py" = ["F401"]
"tests/test-project/**/*.py" = ["ALL"]
"example/features/environment.py" = ["F401"]
"grizzly_extras/mkdocs/**" = ["G004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-branches = 15
max-args = 10

[tool.mypy]
exclude = ["tests/test-project/"]
# https://github.com/python/mypy/issues/5870
#follow_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
#disallow_incomplete_defs = true
#disallow_any_generics = true
#disallow_subclassing_any = true
#disallow_untyped_calls = true
disallow_incomplete_defs = true
#disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "grizzly.locust"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.unit.test_grizzly.test_locust_dispatch"
disable_error_code = ["type-abstract", "unused-ignore"]

[[tool.mypy.overrides]]
module = "grizzly.steps.*"
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = "behave.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymqi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gevent.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "influxdb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opencensus.ext.azure.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.iot.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geventhttpclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "piplicenses.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontmatter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "roundrobin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "parameterized.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jinja2_simple_tags.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "greenlet.*"
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*", "setup.py", ".pytest_tmp/*"]

[tool.pytest.ini_options]
addopts = [
    "--cov=.",
    "--cov-report=",
    "--no-cov-on-fail"
]
timeout = 10
filterwarnings = [
    "ignore:setDaemon\\(\\) is deprecated.*:DeprecationWarning",
    "ignore:.*pkg_resources.*:DeprecationWarning",
    "ignore:Use setlocale.*instead:DeprecationWarning",
    "error:.*:gevent.monkey.MonkeyPatchWarning",
    "ignore:.*Use timezone-aware objects to represent datetimes",
    "ignore:.*use of fork\\(\\) may lead to deadlocks in the child",
    "ignore:'locale\\.getdefaultlocale' is deprecated"
]
