[metadata]
name = grizzly-loadtester
version = 0.0.0
url = https://biometria-se.github.io/grizzly
project_urls =
    Documentation = https://biometria-se.github.io/grizzly/
    Code = https://github.com/biometria-se/grizzly/
    Tracker = https://github.com/Biometria-se/grizzly/issues
description = Traffic generator based on locust and behave.
author = biometria
author_email = opensource@biometria.se
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords =
    locust
    behave
    load
    loadtest
    performance
    traffic generator

[options]
python_requires = >=3.8
packages = find:
install_requires =
    aenum >=3.1.8
    azure-core <1.23.0
    azure-servicebus >=7.6.0
    azure-storage-blob >=12.9.0
    behave >=1.2.6
    influxdb >=5.3.1
    Jinja2 >=3.0.3
    jsonpath-ng >=1.5.3
#    locust ==2.8.4
    locust @ git+https://github.com/mgor/locust.git@bug/stopping_users
    lxml >=4.8.0
    mypy-extensions >=0.4.3
    opencensus-ext-azure >=1.1.1
    paramiko >=2.9.2
    python-dateutil >=2.8.2
    backports.zoneinfo >=0.2.1;python_version<'3.9'
    pyzmq >=22.3.0
    typing-extensions >=3.10.0,<4.0.0
    PyYAML <6.0.0,>=5.3.0
    setproctitle >=1.2.2
    tzdata >=2022.1

[options.entry_points]
console_scripts =
    async-messaged = grizzly_extras.async_message.daemon:main

[options.packages.find]
include = grizzly*
exclude = tests

[options.package_data]
* = py.typed

[options.extras_require]
mq =
    pymqi ==1.12.0
dev =
    astunparse >=1.6.3
    mkdocs >=1.2.0
    mkdocs-material >=8.2.1
    mypy >=0.931
    flake8 >=4.0.0
    pip-licenses >=3.5.3
    pydoc-markdown >=4.6.1,<5.0.0
    pylint >=2.12.2
    pytablewriter >=0.64.1
    pytest >=7.0.0
    pytest-cov >=3.0.0
    pytest-mock >=3.7.0
    pytest-timeout >=2.1.0
    atomicwrites >= 1.4.0
    types-paramiko >=2.8.13
    types-python-dateutil >=2.8.9
    types-PyYAML <6.0.0,>=5.3.0
    types-requests >=2.27.0
    types-Jinja2 >=2.0.0
    types-backports >=0.1.3
ci =
    build >=0.7.0
    twine >=3.8.0,<4.0.0
    pip-tools >=6.5.0

[pylint.MASTER]
ignore=.env,.venv
jobs=1
disable=all
enable=F,
    unreachable,
    duplicate-key,
    unnecessary-semicolon,
    global-variable-not-assigned,
    unused-variable,
    unused-wildcard-import,
    unused-import,
    line-too-long,
    binary-op-exception,
    bad-format-string,
    anomalous-backslash-in-string,
    bad-open-mode,
    E0001,E0011,E0012,E0100,E0101,
    E0102,E0103,E0104,E0105,E0107,
    E0108,E0110,E0111,E0112,E0113,
    E0114,E0115,E0116,E0117,E0118,
    E0202,E0203,E0211,E0213,E0236,
    E0237,E0238,E0239,E0240,E0241,
    E0301,E0302,E0303,E0401,E0402,
    E0601,E0602,E0603,E0604,E0611,
    E0632,E0633,E0701,E0702,E0703,
    E0704,E0710,E0711,E0712,E1003,
    E1101,E1102,E1111,E1120,E1121,
    E1123,E1124,E1125,E1126,E1127,
    E1128,E1129,E1130,E1131,E1132,
    E1133,E1134,E1135,E1136,E1137,
    E1138,E1139,E1200,E1201,E1205,
    E1206,E1300,E1301,E1302,E1303,
    E1304,E1305,E1306,E1310,E1700,
    E1701

max-line-length=180
msg-template='{path}:{line}:{column},{category},{symbol}:{msg}'
reports=no
output-format=text
generated-members=REQ,LINGER,REP,ROUTER,NOBLOCK,IDENTITY

[flake8]
max-line-length=180
ignore=E722,W503,E402,F405,F403
exclude=.git,__pycache__,docs,old,build,dist

[mypy]
# https://github.com/python/mypy/issues/5870
#follow_missing_imports=True
show_column_numbers=True
check_untyped_defs=True
disallow_untyped_defs=True
#disallow_incomplete_defs=True
#disallow_any_generics=True
#disallow_subclassing_any=True
#disallow_untyped_calls=True
disallow_incomplete_defs=True
#disallow_untyped_decorators=True
no_implicit_optional=True
no_implicit_reexport=True
warn_unused_configs=True
warn_redundant_casts=True
warn_unused_ignores=True
warn_return_any=True
warn_unreachable=True
strict_equality=True

[mypy-grizzly.steps.*]
no_implicit_reexport=False

[mypy-grizzly.scenarios.iterator]
warn_unused_ignores=False

[mypy-grizzly.tasks.date]
ignore_missing_imports=True
warn_unused_ignores=False

[mypy-grizzly.testdata.variables.date]
ignore_missing_imports=True
warn_unused_ignores=False

[mypy-zoneinfo.*]
ignore_missing_imports=True

[mypy-behave.*]
ignore_missing_imports=True

[mypy-pymqi.*]
ignore_missing_imports=True

[mypy-setproctitle.*]
ignore_missing_imports=True

[mypy-urllib3.*]
ignore_missing_imports=True

[mypy-gevent.*]
ignore_missing_imports=True

[mypy-influxdb.*]
ignore_missing_imports=True

[mypy-lxml.*]
ignore_missing_imports=True

[mypy-jsonpath_ng.*]
ignore_missing_imports=True

[mypy-parse.*]
ignore_missing_imports=True

[mypy-aenum]
ignore_missing_imports=True

[mypy-opencensus.ext.azure.*]
ignore_missing_imports=True

[mypy-zmq.*]
ignore_missing_imports=True

[mypy-azure.*]
ignore_missing_imports=True
ignore_errors=True

[behave]

[coverage:run]
omit=tests/*,setup.py

[tool:pytest]
addopts=--cov=. --cov-report= --no-cov-on-fail
timeout=10
filterwarnings=
    ignore:Trying to detect encoding from a tiny portion of.*:UserWarning
    ignore:currentThread\(\) is deprecated.*:DeprecationWarning
    ignore:setDaemon\(\) is deprecated.*:DeprecationWarning
