[project]
name = "grizzly-loadtester-common"
dynamic = ["version", "readme"]
description = "Common functionality used in grizzly-loadtester packages"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "biometria", email="opensource@biometria.se" },
]
maintainers = [
    { name = "Mikael Göransson", email = "github@mgor.se" }
]
requires-python = ">=3.10"
dependencies = [
    "azure-core>=1.35.0",
    "behave>=1.3.1",
    "jinja2>=3.1.6",
    "jinja2-simple-tags>=0.6.1",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.1",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "tzdata>=2025.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]
keywords = [
    "grizzly",
    "common",
    "locust",
    "behave",
    "load",
    "loadtest",
    "performance",
    "traffic generator"
]

[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "../hatch_build.py"

[tool.hatch.metadata.hooks.custom]
path = "../hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/grizzly_common"]

[tool.hatch.build.targets.sdist]
include = ["src/grizzly_common", "tests/"]

[tool.hatch.build.targets.sdist.force-include]
"../LICENSE.md" = "LICENSE.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^common@(?P<version>[v]\\d+(?:\\.\\d+){0,2}[^\\+]*?)(?:\\+.*)?$"
scm.git.describe_command = "git describe --dirty --tags --long --abbrev=40 --match 'common@v*[0-9]*'"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../"

[tool.hatch.build.hooks.vcs]
version-file = "src/grizzly_common/__version__.py"

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
